Improve padding on #home page
Been bugging me for some time...

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -49,6 +49,14 @@ ol {
   }
 }
 
+#home {
+  border-top: none;
+
+  @include respond-to(tablets desktops) {
+    padding: 2em 4em 4em;
+  }
+}
+
 .content {
   margin: 0 auto;
   text-align: left;
