Restore the markdown icon that I broke
This isn't the most elegant thing. It may be time to drop
angular-bootstrap. Ah, well.

--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -60,6 +60,10 @@
   <div class="tabbable"
        ng-model="preview"
        ng-show="editing">
+    <a class="icon-markdown"
+       target="_blank"
+       title="Parsed as Markdown"
+       href="https://guides.github.com/features/mastering-markdown/" />
     <div class="styled-text tab-pane" data-value="no" data-title="Write">
       <markdown ng-model="model.text" name="text" />
     </div>
