--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -137,6 +137,14 @@
   @include quote;
 }
 
+.icon-markdown {
+  color: $text-color;
+  position: absolute;
+  left: 9em;
+  line-height: 1.5;
+  top: 0;
+}
+
 //MAGICONTROL////////////////////////////////
 .magicontrol {
   @include transition(opacity);
