Reduce tag list margin back to match other padding

--- a/h/static/styles/tags-input.scss
+++ b/h/static/styles/tags-input.scss
@@ -69,7 +69,7 @@ tags-input {
 
   .tag-list {
     @include pie-clearfix;
-    margin: 1em 0 0;
+    margin: .2em 0;
 
     .tag-item {
       font-size: 11px;
