Ensure styled-text is applied to all markdown docs

--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -67,7 +67,7 @@
     <div class="styled-text tab-pane" data-value="no" data-title="Write">
       <markdown ng-model="model.text" name="text" />
     </div>
-    <div class="styled-text tab-pane" data-value="yes" data-title="Preview">
+    <div class="tab-pane" data-value="yes" data-title="Preview">
       <p class="form-field" ng-show="!model.text">Nothing to preview.</p>
       <markdown ng-model="model.text" ng-readonly="true" name="text" />
     </div>
