--- a/h/templates/markdown.html
+++ b/h/templates/markdown.html
@@ -1,4 +1,4 @@
 <textarea class="form-input form-field" ng-hide="readonly"
           ng-click="$event.stopPropagation()"
           ng-required="required" />
-<div ng-bind-html="rendered" ng-show="readonly" />
+<div class="styled-text" ng-bind-html="rendered" ng-show="readonly" />
