Fix styles of the home/help/auth pages
We now use the styled text module here and overwrite it to work with
larger copy.

--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -17,7 +17,7 @@ $headings-color: $text-color;
 @import 'styled-text';
 @import 'simple-search';
 @import 'tags-input';
-
+@import 'page';
 
 //ELEMENT STYLES////////////////////////////////
 a {
