Move textarea styling into form module

--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -76,6 +76,12 @@
   }
 }
 
+.form-textarea {
+  min-height: 8em;
+  max-width: 100%;
+  resize: vertical;
+}
+
 .form-field-error {
   .form-input {
     &, &:focus, &.js-focus {
