--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -98,7 +98,7 @@
   <div class="tags tags-read-only" ng-show="tags.length && !editing">
     <ul class="tag-list">
       <li class="tag-item" ng-repeat="tag in tags">
-        <a href="/stream?q=tag:{{tag.text}}" target="_blank">{{tag.text}}</a>
+        <a href="/stream?q=tag:'{{tag.text}}'" target="_blank">{{tag.text}}</a>
       </li>
     </ul>
   </div>
