Change citation text to 'on'

--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -24,7 +24,7 @@
       <i class="small icon-comment3"
          ng-hide="model.target.length || model.references || editing"></i>
       <span class="annotation-citation" ng-show="!editing && !embedded && document.title">
-        left an annotation on &ldquo;<a href="{{document.uri}}" target="_blank">{{document.title}}</a>&rdquo;
+         on &ldquo;<a href="{{document.uri}}" target="_blank">{{document.title}}</a>&rdquo;
         <span class="annotation-citation-domain" ng-show="document.domain != document.title">({{document.domain}})</span>
       </span>
     </span>
