Relabel `Claim account` to `Confirm account`
Fixes #1260

--- a/h/templates/auth.html
+++ b/h/templates/auth.html
@@ -134,7 +134,7 @@
 <!-- / Register -->
 
 <!-- Forgot password -->
-<form data-title="Claim an account"
+<form data-title="Confirm account"
       data-value="forgot"
       class="form tab-pane"
       name="forgot"
