More view, sort, and threading refactoring
Clean up a number of issues.

- Fix page search, especially for deep results.

- Split thread directive into its own file.

- Clean up the separation between CSS of threads and annotations.

- Separate more actions menu for annotations from thread actions strip.
  Edit and delete in the former. Share and reply in the latter. Cleans
  up controllers quite a bit.

- Refactor both thread and annotation directives.

- Break out progressive rendering service.

- Clean up template variables to use the controllerAs syntax to treat
  controller as the view model.

- Clean up thread collapse prevention during editing.

- Refactor threading to remove the thread property from annotations and
  take ownership of the thread root, removing the need to track many
  things about threading in the App controller.

- Clean up annotation edit cycle and drop the ngModel usage (doesn't
  work well with objects since it does a shallow watch).

- New thread and annotation directives come with full documentation in
  ngdoc style as supported by the dgeni documentation tool.

- Preserve annotations, when appropriate, upon changing authentication.
  Fix #567.

--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -1,14 +1,55 @@
-@import 'base';
-
 $thread-padding: 1em;
 $threadexp-width: .6em;
+
+.magicontrol {
+  margin: 0 .4em;
+  opacity: 0;
+
+  &.dropdown {
+    top: 4px;
+  }
+
+  :hover > & {
+    opacity: 1;
+  }
+}
+
+.share-dialog {
+  a {
+    float: left;
+    line-height: 1.4;
+    margin-right: .5em;
+    vertical-align: middle;
+  }
+
+  div {
+    overflow: hidden;
+  }
+
+  input {
+    padding: 0;
+    width: 100%;
+  }
+}
+
+.stream-list {
+  & > * {
+    margin-bottom: .72em;
+  }
+
+  .card-emphasis {
+    @include box-shadow(6px 6px 8px -2px $gray-light);
+  }
+}
 
 .thread {
   cursor: pointer;
   position: relative;
 
-  & > * {
-    @include pie-clearfix;
+  &.thread-collapsed {
+    .reply-count {
+      font-style: italic;
+    }
   }
 
   & > ul {
@@ -23,26 +64,22 @@ $threadexp-width: .6em;
     font-size: .8em;
   }
 
+  .reply-count {
+    color: $text-color;
+    &:hover { color: $link-color-hover; }
+    &:focus { outline: 0; }
+  }
+
   .thread {
     border-left: 1px dotted $gray-light;
     padding: 0;
     padding-left: $thread-padding;
 
-    &.collapsed {
+    &.thread-collapsed {
       border-color: transparent;
 
-      & > .annotation {
-        .body {
-          display: none;
-        }
-
-        .magicontrol {
-          display: none;
-        }
-
-        .reply-count {
-          font-style: italic;
-        }
+      & > article markdown {
+        display: none;
       }
     }
   }
@@ -72,13 +109,7 @@ $threadexp-width: .6em;
     }
   }
 
-  .annotation {
-    &.squished {
-      padding-left: 0;
-    }
-  }
-
-  &.collapsed {
+  &.thread-collapsed {
     &:hover {
       background-color: $gray-lightest;
     }
@@ -99,15 +130,6 @@ $threadexp-width: .6em;
         -o-text-overflow: ellipsis;
         white-space: nowrap;
       }
-
-      .indicators {
-        margin-right: .25em;
-      }
     }
   }
-}
-
-.annotation-citation-domain {
-  color: $gray-light;
-  font-size: .923em;
 }
