--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -1,7 +1,6 @@
 //ANNOTATION////////////////////////////////
 //This is for everything that is formatted as an annotation.
 .annotation {
-  @include pie-clearfix;
   font-family: $sans-font-family;
   font-weight: 300;
   position: relative;
@@ -24,12 +23,6 @@
     }
   }
 
-  .reply-count {
-    color: $text-color;
-    &:hover { color: $link-color-hover; }
-    &:focus { outline: 0; }
-  }
-
   .user {
     font-weight: bold;
     font-size: 1.1em;
@@ -39,39 +32,21 @@
       text-decoration: underline;
     }
   }
-
-  .buttonbar {
-    @include pie-clearfix;
-    margin: .25em 0;
-
-    .btn {
-      margin-right: .5em;
-    }
-  }
-
-  .tip {
-    @extend .small;
-    float: right;
-  }
-
-  .quote {
-    font-style: italic
-  }
 }
 
-// Temporary hack until sidebar and displayer are unified
-.annotation-displayer {
-  .user {
-    &:hover {
-      color: $link-color-hover;
-      cursor: pointer;
-      text-decoration: underline;
-    }
-  }
+.annotation-actions {
+  margin-top: 4px;
 }
 
+.annotation-quote {
+  @include quote;
+}
 
-//EXCERPT////////////////////////////////
+.annotation-citation-domain {
+  color: $gray-light;
+  font-size: .923em;
+}
+
 .excerpt {
   margin-bottom: 1em;
   position: relative;
@@ -85,54 +60,8 @@
   }
 }
 
-.annotation-quote {
-  @include quote;
-}
-
 .icon-markdown {
   color: $text-color;
-  position: absolute;
-  left: 9em;
   line-height: 1.5;
-  top: 0;
-}
-
-//MAGICONTROL////////////////////////////////
-.magicontrol {
-  margin: 0 .4em;
-  opacity: 0;
-
-  &.open, :hover > & {
-    opacity: 1;
-  }
-}
-
-.share-dialog {
-  display: none;
-
-  a {
-    float: left;
-    line-height: 1.4;
-    margin-right: .5em;
-    vertical-align: middle;
-  }
-
-  div {
-    overflow: hidden;
-  }
-
-  input {
-    padding: 0;
-    width: 100%;
-  }
-}
-
-.stream-list {
-  & > * {
-    margin-bottom: .72em;
-  }
-
-  .card-emphasis {
-    @include box-shadow(6px 6px 8px -2px $gray-light);
-  }
+  margin-right: .5em;
 }
