--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -1,170 +1,147 @@
-<form name="form">
+<!-- Deletion notice -->
+<span ng-if="!vm.editing && vm.annotation.deleted">Annotation deleted.</span>
 
-  <!-- Deletion notice -->
-  <span ng-show="!editing && model.deleted"
-        >Annotation deleted.</span>
+<!-- Excerpts -->
+<div class="excerpt" ng-repeat="target in vm.annotation.target">
+  <blockquote class="annotation-quote"
+              ng-bind-html="target.quote"
+              ng-hide="target.showDiff" />
+  <blockquote class="annotation-quote"
+              ng-bind-html="target.trustedDiffHTML"
+              ng-show="target.showDiff" />
+  <label ng-show="target.diffHTML">
+    Show differences
+    <input class="small pull-right"
+           type="checkbox"
+           ng-model="target.showDiff"
+           ng-click="$event.stopPropagation()" />
+  </label>
+</div>
 
-  <!-- Preface -->
-  <header ng-switch="editing && action">
-    <!-- Privacy -->
-    <privacy ng-model="model.permissions"
-             ng-show="editing && action != 'delete'"
-             class="dropdown privacy pull-right"
-             name="privacy" />
+<!-- Preface -->
+<header>
+  <!-- Privacy -->
+  <privacy ng-if="vm.editing && action != 'delete'"
+           ng-model="vm.annotation.permissions"
+           class="dropdown privacy pull-right"
+           name="privacy" />
 
-    <strong ng-switch-when="delete">You may provide an explanation here.</strong>
-
-    <!-- User -->
-    <span ng-switch-default class="indicators">
-      <username data-user="model.user" ng-show="!editing"></username>
-      <i class="small icon-locked"
-         ng-show="form.privacy.$viewValue != 'Public' && !editing"></i>
-      <i class="small icon-highlighter2"
-         ng-hide="model.text || editing || model.deleted || model.tags.length"></i>
-      <i class="small icon-comment3"
-         ng-hide="model.target.length || model.references || editing"></i>
-      <span class="annotation-citation" ng-show="!editing && !embedded && document.title">
-         on &ldquo;<a href="{{document.uri}}" target="_blank">{{document.title}}</a>&rdquo;
-        <span class="annotation-citation-domain" ng-show="document.domain != document.title">({{document.domain}})</span>
-      </span>
+  <!-- User -->
+  <span ng-if="!vm.editing">
+    <username user="vm.annotation.user"></username>
+    <i class="small icon-locked"
+       ng-hide="vm.authorize('read', 'group:__world__')"></i>
+    <i class="small icon-highlighter2"
+       ng-hide="vm.annotation.text ||
+                vm.annotation.deleted ||
+                vm.annotation.tags.length"></i>
+    <i class="small icon-comment3"
+       ng-hide="vm.annotation.target.length || vm.annotation.references"></i>
+    <span class="annotation-citation"
+          ng-if="!vm.embedded"
+          ng-show="vm.document.title">
+      on &ldquo;<a href="{{vm.document.uri}}" target="_blank"
+                   >{{vm.document.title}}</a>&rdquo;
+      <span class="annotation-citation-domain"
+            ng-show="vm.document.domain != vm.document.title"
+            >({{vm.document.domain}})</span>
     </span>
+  </span>
 
-    <!-- Timestamp -->
-    <fuzzytime class="small pull-right"
-               ng-show="!editing && model.updated"
-               ng-model="model.updated"></fuzzytime>
+  <!-- Timestamp -->
+  <fuzzytime class="small pull-right"
+             ng-show="!vm.editing && vm.annotation.updated"
+             ng-model="vm.annotation.updated"></fuzzytime>
 
-    <!-- More actions -->
-    <div class="small magicontrol dropdown pull-right" ng-hide="editing">
+  <!-- More actions -->
+  <div class="annotation-actions pull-right small" ng-if="!vm.editing">
+    <div class="dropdown">
       <i class="dropdown-toggle icon-triangle"
          role="button"
          title="More actions"></i>
-      <ul class="dropdown-menu pull-right" role="menu">
-        <li ng-click="reply()"><i class="icon-reply"></i> Reply</li>
-        <li ng-show="auth.update" ng-click="edit()"><i class="icon-copy"></i> Edit</li>
-        <li ng-show="auth.delete" ng-click="delete()"><i class="icon-x"></i> Delete…</li>
+      <ul class="dropdown-menu" role="menu">
+        <li ng-show="vm.authorize('update')"
+            ng-click="vm.edit()"
+            ><i class="icon-copy"></i> Edit</li>
+        <li ng-show="vm.authorize('delete')"
+            ng-click="vm.delete()"
+            ><i class="icon-x"></i> Delete…</li>
       </ul>
     </div>
-  </header>
+  </div>
+</header>
 
-  <!-- Prompt -->
-  <!-- TODO: replace with placeholder on markdown elements? -->
-  <div ng-show="model.deleted && !editing">
-    <ng-switch on="model.text.length">
-      <div ng-switch-when="0">(no reason given)</div>
-      <div ng-switch-default>Reason:</div>
+<!-- Prompt -->
+<!-- TODO: replace with placeholder on markdown elements? -->
+<div ng-show="vm.annotation.deleted" ng-switch="vm.editing">
+  <strong ng-switch-when="true">You may provide an explanation here.</strong>
+  <div count="vm.annotation.text.length"
+       when="{'0': '(no reason given)',
+              other: 'Reason:'}"
+       ng-pluralize ng-switch-default></div>
+</div>
+
+<!-- Body Write / Preview Tabs -->
+<a class="icon-markdown pull-left"
+   target="_blank"
+   title="Parsed as Markdown"
+   href="https://guides.github.com/features/mastering-markdown/"
+   ng-click="$event.stopPropagation()"
+   ng-if="vm.editing" />
+<div class="tabbable"
+     ng-model="vm.preview"
+     ng-if="vm.editing">
+  <div class="tab-pane" data-value="no" data-title="Write">
+    <markdown class="form-field" ng-model="vm.annotation.text" name="text" />
+  </div>
+  <div class="tab-pane" data-value="yes" data-title="Preview">
+    <p class="form-field" ng-show="!vm.annotation.text">Nothing to preview.</p>
+    <markdown class="form-field" name="text"
+              ng-model="vm.annotation.text"
+              ng-readonly="true" />
+  </div>
+</div>
+
+<markdown class="form-field" name="text"
+          ng-if="!vm.editing"
+          ng-model="vm.annotation.text"
+          ng-readonly="true" />
+
+<!-- Tags -->
+<div class="form-field" ng-if="vm.editing">
+  <tags-input ng-model="vm.annotation.tags"
+              name="tags"
+              class="tags"
+              placeholder="Add tags…"
+              replace-spaces-with-dashes="false"
+              enable-editing-last-tag="true"></tags-input>
+</div>
+
+<div class="tags tags-read-only"
+     ng-if="vm.annotation.tags.length && !vm.editing">
+  <ul class="tag-list">
+    <li class="tag-item" ng-repeat="tag in vm.annotation.tags">
+      <a href="/stream?q=tag:'{{tag.text}}'" target="_blank">{{tag.text}}</a>
+    </li>
+  </ul>
+</div>
+
+<!-- Bottom controls -->
+<div class="form-actions" ng-if="vm.editing">
+  <div class="form-actions-buttons form-actions-left" ng-switch="action">
+    <ng-switch on="action">
+      <button ng-switch-when="edit"
+              ng-click="vm.save(); $event.stopPropagation()"
+              class="btn"><i class="icon-checkmark2 btn-icon"></i> Save</button>
+      <button ng-switch-when="delete"
+              ng-click="vm.save(); $event.stopPropagation()"
+              class="btn"><i class="icon-checkmark2 btn-icon"></i> Delete</button>
+      <button ng-switch-default
+              ng-click="vm.save(); $event.stopPropagation()"
+              class="btn"><i class="icon-checkmark2 btn-icon"></i> Save</button>
     </ng-switch>
+    <button class="btn btn-clean"
+            ng-click="vm.revert(); $event.stopPropagation()"
+            ><i class="icon-x btn-icon"></i> Cancel</button>
   </div>
-
-  <!-- Body Write / Preview Tabs -->
-  <div class="tabbable"
-       ng-model="preview"
-       ng-show="editing">
-    <a class="icon-markdown"
-       target="_blank"
-       title="Parsed as Markdown"
-       href="https://guides.github.com/features/mastering-markdown/" />
-    <div class="tab-pane" data-value="no" data-title="Write">
-      <markdown class="form-field" ng-model="model.text" name="text" />
-    </div>
-    <div class="tab-pane" data-value="yes" data-title="Preview">
-      <p class="form-field" ng-show="!model.text">Nothing to preview.</p>
-      <markdown class="form-field" ng-model="model.text" ng-readonly="true" name="text" />
-    </div>
-  </div>
-
-  <div ng-hide="editing" ng-switch="mode">
-    <markdown class="form-field" name="text"
-              ng-model="model.highlightText"
-              ng-switch-when="'search'" />
-    <markdown class="form-field" name="text"
-              ng-model="model.text"
-              ng-readonly="true"
-              ng-switch-default />
-  </div>
-
-  <!-- Tags -->
-  <div class="form-field" ng-show="editing">
-    <tags-input ng-model="tags"
-                name="tags"
-                class="tags"
-                placeholder="Add tags…"
-                replace-spaces-with-dashes="false"
-                enable-editing-last-tag="true"
-                on-tag-added="addTag($tag)"
-                on-tag-removed="removeTag($tag)"></tags-input>
-  </div>
-
-  <div class="tags tags-read-only" ng-show="tags.length && !editing">
-    <ul class="tag-list">
-      <li class="tag-item" ng-repeat="tag in tags">
-        <a href="/stream?q=tag:'{{tag.text}}'" target="_blank">{{tag.text}}</a>
-      </li>
-    </ul>
-  </div>
-
-  <!-- Bottom controls TODO: Align buttons to the left -->
-  <div class="form-actions" ng-show="editing">
-    <div class="form-actions-buttons form-actions-left">
-      <ng-switch on="action">
-        <button ng-switch-when="edit"
-                ng-click="save($event)"
-                ng-disabled="!form.$valid"
-                class="btn"><i class="icon-checkmark2 btn-icon"></i> Save</button>
-        <button ng-switch-when="delete"
-                ng-click="save($event)"
-                ng-disabled="!form.$valid"
-                class="btn"><i class="icon-checkmark2 btn-icon"></i> Delete</button>
-        <button ng-switch-default
-                ng-click="save($event)"
-                ng-disabled="!form.$valid"
-                class="btn"><i class="icon-checkmark2 btn-icon"></i> Save</button>
-      </ng-switch>
-      <button class="btn btn-clean" ng-click="cancel($event)"><i class="icon-x btn-icon"></i> Cancel</button>
-    </div>
-  </div>
-
-  <div data-ng-bind-html="model.body"
-       data-ng-hide="editing"
-       class="body" />
-
-  <!-- Editing preview -->
-  <div ng-show="previewText" class="preview">
-    <h4>Preview</h4>
-    <div ng-bind-html="previewText" class="body" />
-  </div>
-
-  <!-- Share dialog -->
-  <div class="share-dialog" ng-show="!editing">
-    <a class="icon-export" ng-href="{{shared_link}}"
-       target="_blank"></a>
-    <div>
-      <input type="text"
-             ng-blur="toggle()"
-             ng-model="shared_link"
-             readonly>
-    </div>
-  </div>
-
-  <a class="reply-count small"
-     href=""
-     ng-pluralize=""
-     ng-show="thread.children.length && replies!='false'"
-     count="thread.flattenChildren().length"
-     when="{one: '1 reply', other: '{} replies'}"
-     ng-click="toggleCollapsed($event)" />
-
-  <!-- Bottom control strip -->
-  <a class="small magicontrol" href="" title="Reply"
-     ng-hide="editing"
-     ng-click="reply($event)"><i class="icon-reply"></i> Reply</a>
-  <a class="small magicontrol" href="" title="Share"
-     ng-hide="editing"
-     ng-click="share($event)"><i class="icon-export"></i> Share</a>
-  <a class="small magicontrol" href="" title="Edit"
-     ng-show="auth.update && !editing"
-     ng-click="edit($event)"><i class="icon-copy"></i> Edit</a>
-  <a class="small magicontrol" href="" title="Delete"
-     ng-show="auth.delete && !editing"
-     ng-click="delete($event)"><i class="icon-x"></i> Delete</a>
-</form>
+</div>
