Got TinyMCE working and configured.

--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -58,7 +58,7 @@
 
   <!-- Body Write / Preview Tabs -->
   <div ng-show="editing">
-    <textarea ui-tinymce id="tinymce1" ng-model="model.text" ng-required="required" />
+    <textarea ui-tinymce ng-model="model.text" ng-required="required" />
   </div>
 
   <div ng-hide="editing" ng-switch="mode">
