--- a/h/templates/annotation.html
+++ b/h/templates/annotation.html
@@ -57,7 +57,7 @@
   </div>
 
   <!-- Body Write / Preview Tabs -->
-  <div ng-show="editing">
+  <div class="wysiwigeditor" ng-show="editing">
     <textarea ui-tinymce ng-model="model.text" ng-required="required" />
   </div>
 
