Add markdown insertLink and insertIMG functions

--- a/h/templates/markdown.html
+++ b/h/templates/markdown.html
@@ -1,3 +1,7 @@
+<div class="pull-right">
+<a class="" ng-hide="readonly" ng-click="insertLink()" href="">Insert Link</a>
+<a class="" ng-hide="readonly" ng-click="insertIMG()" href="">Insert Image</a>
+</div>
 <textarea class="form-input form-textarea" ng-hide="readonly"
           ng-click="$event.stopPropagation()"
           ng-required="required" />
