Use font-stack over installing web fonts
Now using Helvitica Neue/Arial and Georgia over Open Sans and
Merriweather to reduces the size of the application payload and increase
loading times. The fonts themselves were not adding much to the overall
experience.

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -3,6 +3,7 @@
 .annotation {
   @include pie-clearfix;
   font-family: $sans-font-family;
+  font-weight: 300;
   position: relative;
 
   &:hover fuzzytime a, &:hover .reply-count {
@@ -82,6 +83,7 @@
   .more, .less {
     font-size: .9em;
     font-family: $sans-font-family;
+    font-weight: 300;
     display: block;
     text-align: right;
   }
