--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -167,7 +167,8 @@
 }
 
 .form-actions-message {
-  font-size: 13px;
+  font-size: .9231em;
+  line-height: 1.5;
   float: left;
   margin-top: 7px;
 }
