--- a/h/static/styles/styled-text.scss
+++ b/h/static/styles/styled-text.scss
@@ -44,7 +44,12 @@
   }
 
   ol, ul {
-    padding-left: 1.25em;
+    list-style-position: inside;
+    padding-left: 0;
+
+    ol, ul {
+      padding-left: 1em;
+    }
   }
 
   ol {
