--- a/h/static/styles/base.scss
+++ b/h/static/styles/base.scss
@@ -36,7 +36,7 @@ $link-color-hover:       $hypothered !default;
 
 // Typography
 // -------------------------
-$sans-font-family:        "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$sans-font-family:        "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif !default;
 $serif-font-family:       Georgia, "Times New Roman", Times, serif !default;
 $mono-font-family:        Monaco, Menlo, Consolas, "Courier New", monospace !default;
 
@@ -85,7 +85,8 @@ $input-border-radius: 2px;
   background-color: white;
   border: 1px solid $gray-lighter;
   border-radius: .2em;
-  font-family: "Source Sans Pro", "Open Sans", sans-serif;
+  font-family: $sans-font-family;
+  font-weight: 300;
   font-size: 1em;
   padding: .33em .5em;
   &:focus, &.js-focus {
@@ -149,8 +150,6 @@ $input-border-radius: 2px;
 @mixin quote {
   color: $gray;
   font-family: $serif-font-family;
-  font-size: 1em;
-  margin-bottom: 1em;
   padding: 0 .615em;
   border-left: 3px solid $gray-lighter;
 }
@@ -167,6 +166,7 @@ $input-border-radius: 2px;
   @include single-transition(opacity, .2s);
   direction: ltr;
   font-family: $sans-font-family;
+  font-weight: 300;
   line-height: 29px;
   opacity: 0;
   position: relative;
