Remove placeholder on activation code input

--- a/h/templates/auth.html
+++ b/h/templates/auth.html
@@ -180,7 +180,7 @@
   <div class="form-field">
     <label class="form-label" for="field-activate-code">Your activation code:</label>
     <input class="form-input" id="field-activate-code"
-           type="text" name="code" value="" placeholder="12345678"
+           type="text" name="code" value=""
            required autocorrect="false" autocapitalize="false"
            ng-model="model.code" />
     <ul class="form-error-list">
