Tweak font stack for Ubuntu

--- a/h/static/styles/base.scss
+++ b/h/static/styles/base.scss
@@ -37,8 +37,8 @@ $link-color-hover:       $hypothered !default;
 // Typography
 // -------------------------
 $sans-font-family:        "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif !default;
-$serif-font-family:       Georgia, "Times New Roman", Times, serif !default;
-$mono-font-family:        Monaco, Menlo, Consolas, "Courier New", monospace !default;
+$serif-font-family:       Georgia, "Bitstream Charter", "Times", "Times New Roman", serif !default;
+$mono-font-family:        Open Sans Mono, Menlo, DejaVu Sans Mono, monospace !default;
 
 $base-font-size:          16px !default;
 $base-font-family:        $sans-font-family !default;
