--- a/h/static/styles/styled-text.scss
+++ b/h/static/styles/styled-text.scss
@@ -97,7 +97,7 @@
   }
 
   code {
-    font-family: Open Sans Mono, Menlo, DejaVu Sans Mono, monospace;
+    font-family: $mono-font-family;
     font-size: .875em;
     color: black;
   }
